force-app/main/default/objects/nFORCE__Session__c/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>This field is used to indicate the context of an existing session. It is automatically set during the New Customer Onboarding, Deposit Origination, Deposit Maintenance workflows, Online Applications, Consumer Loans and Online Deposit Origination workflows.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deposit Origination</fullName>
            </value>
            <value>
                <fullName>Commercial Loan</fullName>
            </value>
            <value>
                <fullName>Consumer Loan</fullName>
            </value>
            <value>
                <fullName>Online Deposit Application</fullName>
            </value>
            <value>
                <fullName>Online Consumer Loan Application</fullName>
            </value>
            <value>
                <fullName>Online Commercial Loan Application</fullName>
            </value>
            <value>
                <fullName>Deposit Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>