force-app/main/default/objects/nFORCE__Session__c/fields/nFORCE__Route_Group__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Route_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not required. It populates automatically. This field shows the route group associated to the session.</description>
    <label>Route Group</label>
    <referenceTo>nFORCE__Route_Group__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>